--- a/customer_level_segmentation.ipynb
+++ b/customer_level_segmentation.ipynb
@@ -838,9 +838,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0e88a7ab",
+   "metadata": {},
+   "source": [
+    "##### cluster 0(Yellow):\n",
+    "\n",
+    "- High Engagement: Frequent purchases (high transactions) and recent activity (low recency).\n",
+    "\n",
+    "- Moderate Coupon Reliance: Use coupons occasionally but are not fully dependent on them.\n",
+    "\n",
+    "**Strategy**:\n",
+    "\n",
+    "- Reward loyalty with exclusive offers or early access to new products.\n",
+    "\n",
+    "- Upsell premium products (they’re likely to spend more).\n",
+    "\n",
+    "##### Cluster 1 (Green):\n",
+    "\n",
+    "- Declining Engagement: Haven’t purchased recently (high recency) and show moderate historical activity.\n",
+    "\n",
+    "- Coupon-Averse: Rarely use discounts.\n",
+    "\n",
+    "**Strategy**:\n",
+    "\n",
+    "- Re-engage with personalized reactivation campaigns (e.g., \"We miss you!\" discounts).\n",
+    "\n",
+    "- Investigate churn reasons (e.g., survey feedback).\n",
+    "\n",
+    "##### Cluster 2  (Purple):\n",
+    "\n",
+    "- Low Spend: Infrequent purchases (low transactions) but somewhat recent activity (moderate recency).\n",
+    "\n",
+    "- Coupon Reliant: Highly dependent on discounts to make purchases.\n",
+    "\n",
+    "**Strategy**:\n",
+    "\n",
+    "- Target with time-sensitive coupon offers.\n",
+    "\n",
+    "- Bundle deals to increase basket size (e.g., \"Buy 2, get 1 free\")."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cd272b0",
+   "id": "bc9f9feb",
    "metadata": {},
    "outputs": [],
    "source": []
